css/style.css
body
{
    margin:0;
    padding:0;
    background-size: 100%;
    font-family: 'Montserrat', sans-serif;
    color:#333333;
    background: -webkit-linear-gradient(#c8e0e2, #ebe9dc); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#c8e0e2, #ebe9dc); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#c8e0e2, #ebe9dc); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#c8e0e2, #ebe9dc); 
}

.container
{
  margin-top:20px;
}

.med-container
{
  margin-top: 20px;
  background-color: #fff;
}
#vis svg {
    width: 100%
}

#blurb {
    height: 60px;
    border-top: 1px solid #e2e2e2;
    padding-top: 20px;
}
#lineGraph
{
  width:74%;
}
#mapContainer
{
  width:74%;

}

#lineGraph, #legend
{
  background-color: #fff;
}
path {
    stroke: #999999;
    stroke-width: 1.5;
    fill: none;
}

path.current,path.highlight.current {
    stroke: black;
    stroke-width: 2.2;
}

path.selected{
    stroke: red !important;
    stroke-width: 3.5 !important;
}

.highlight {
    stroke-width: 1.5px;
}

line {
    stroke: black;
}

text {
    font-size: 11px;
}

.axis {
    stroke-width: 0.8;
    stroke: #000;
}

.xTicks,.yTicks {
    stroke-width: 0.6;
    stroke: #000;
}

#cite {
    font-size: 0.8em;
    text-align: right;
    margin-top: 10px;
    padding-bottom: 20px;
}

#cite a {
    background: #e2e2e2;
    text-decoration: none;
    color: #821122;
}

.yLabel{
    display: inline-block;
    position: relative;
    left: -100px;
}

.clickable{
    cursor: pointer;
}

.cursorDefault{
  cursor: default;
}

.wrapper
{
    width:960px;
    margin:0 auto;
    border:1px solid #ff6600;
    height:800px;
}

.page-header
{
    margin-top:0;
    overflow: auto;
    border:none;
}

.page-header span
{
    margin:0 auto;
    display: block;
    font-style: italic;
    font-family: "Georgia", Arial, sans-serif;

}

.page-header h2
{
    margin:0;
    padding:0;
}

.shadow
{
   box-shadow: 2px 2px 5px #888888;
}

.btn
{
    background-color:#737373;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    color:#fff;
    font-size:12px;
    margin-right:5px;
}
.select
{
    background-color:#698a97;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    color:#fff;
    font-size:12px;
    margin-right:5px;
    margin:0;
}
.form-control
{
  border:1px solid #999;
  border-radius:0;
  height:31px;
  font-size: 11px;
  width:19em;
}

h1,h2,h3,h4
{
    font-family: 'Montserrat', sans-serif;
    color: #000;
    letter-spacing: -1px;
    margin-bottom: 0px;
    font-weight: normal;
}

p
{
  text-align: justify;

}

.circle 
{
    border-radius: 50%;
    width: 35px;
    height:35px;
    float:left;
    color:#fff;
    text-align: center;
    clear:both;
    margin-right:5px;
    margin-bottom:5px;
    line-height: 30px;
    font-size: 0;
    float:left;
    

}

.circle span
{
  margin-top:5px;
  display: inline-block
}
#filters li .info
{
    float: left;
    margin-left: 5px;
    margin-top: 9px;
    text-align: left;
    width: 80%
}

.source-title
{
  margin-top: 0px;
  color:#666;
  cursor: default;
  font-size: 14px;


}

.toggleDisplay span{
  display: block;
  font-size: 12px;
}

.toggleDisplay{
  display: none;
}

.circle:hover
{
    background-position: 0 -35px;
    opacity: 1.0
}

path.linegraphPath {
  display: none;
}

path.highlight{
  display: inline;
}
.circleDeSelected
{
  opacity: 0.5;
}

.SAS-default
{
  background-image: url("../images/SAS.png");
  background-position:0 0;
}

.SAS-title:hover
{
  color:#999;
}

.INS.highlight {
    stroke:#40a4d8;
}

.INS-default
{
  background-image: url("../images/INS.png");
  background-position:0 0;
}

.INS-title:hover
{
  color:#40a4d8;
}

.NIS.highlight {
    stroke:#33beb7;
}

.NIS-default
{
    background-image: url("../images/NIS.png");
}

.NIS-title:hover
{
  color:#33beb7;
}


.OPS.highlight {
    stroke:#FED34C;
}

.OPS-default
{
     background-image: url("../images/OPS.png");
}


.OPS-title:hover
{
   color: #FED34C;
}


.MOS.highlight {
    stroke: #a364d9;
}

.MOS-default
{
    background-image: url("../images/MOS.png");
}

.MOS-title:hover
{
   color:#a364d9;
}

.INCS.highlight {
    stroke: #ee6579;
}
.INCS-default
{
    background-image: url("../images/INCS.png");
}


.INCS-title:hover
{
   color: #ee6579;
}

.NAS.highlight {
    stroke: #99cc33;

}

.NAS-default
{
     background-image: url("../images/NAS.png");
}


.MIS.highlight {
    stroke: #99cc33;
}
.MIS-default
{
    background-image: url("../images/MIS.png");
}

.MIS-title:hover
{
   color:#99cc33;
}

/**************** legend ul styling ********************/
#filters
{
  margin:20px 0 0 0;
  padding:0;
  list-style-type: none;
}

.ch-grid {
  margin: 40px 0 0 0;
  padding: 0;
  list-style: none;
  display: block;
  text-align: center;
  width: 100%;
}

.ch-grid:after,
.ch-item:before {
  content: '';
    display: table;
}

.ch-grid:after {
  clear: both;
}

.ch-grid li {
  width: auto;
  height: auto;
  margin:  0 0 0px 0;
  padding-bottom:5px;
  overflow: auto;
}
.ch-grid li:last-child
{
  border-bottom:none;
}


.filterDistinct{
  background-position:0px -35px;
  }

/******************************************************/
.footer
{
    padding:20px;
    text-align: right;
}

a 
{
    color:#105D6D;
}

/*ifeanyi's additions here */
.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
    shape-rendering: crispEdges;
}

.grid path {
    stroke-width: 0;

}

.axis text {
    fill: #555;
    font-size: 10px;
    stroke:none;
    font-family: Helvetica, Arial, sans-serif;
}

.axis line {  
    stroke: #000;
    shape-rendering: crispEdges;  
} 

.axis {
    font-size: 12px;
}

.axis-label {
    margin-right: 5px;
    font-size: 12px !important;
    font-weight: bolder;
}

div.tooltip {
    position: absolute; 
    text-align: center; 
    width: auto;  
    height: auto;   
    padding: 5px;
    color: #fff;
    font: 14px sans-serif;  
    background: black;  
    border: 0px;          
    border-radius: 5px;  
}

div.hoverinfo {
  position: absolute; 
    text-align: center; 
    width: auto;  
    height: auto;   
    padding: 5px;
    color: #fff;
    font: 14px sans-serif;  
    background: black;  
    border: 0px;          
    border-radius: 5px;
}

#colorCodedMap {
    display:block;
    margin-top:-35px !important;
    margin-left:10%;
}

.datamap {
  margin-left: auto;
    margin-right: auto;
  float:center !important;
  overflow:visible !important;
}
#legend 
{
    min-height: 445px;
}

#page-title
{
    float:left;
    margin-right:10px;
}

.logo
{
    float:left; 
    margin-right:10px;
    margin-top:5px;
}

#page-title, .em-source, #map-title
{
  /*margin-left:55px;*/
}

.main-title
{
    float:left;
}

.page-header span.title-blurb
{
    clear:both; 
    display: block;
}

.inlineTruckImg{
  width: 24px;
}

.nopadding
{
  padding:0;
}
#infoBox
{
  border-top:1px solid #666;
  padding-top: 40px;
  margin-top:40px;
  -webkit-column-count: 2; /* Chrome, Safari, Opera */
  -moz-column-count: 2; /* Firefox */
  column-count: 2;
}


/********************* material colors ***********************/
#barChart circle
{
  fill:#CC0000;
  text-transform: uppercase;
}

#barChart rect
{
  fill:#c0c0c0;

}
#barChart rect#pm25, #barChart circle#pm25
{
  fill:#498ca1;
  color:#fff;
}

#barChart rect#pm10, #barChart circle#pm10
{
  fill:#9C3838;
  color:#fff;
}

#barChart rect#SOx, #barChart circle#SOx
{
  fill:#9B7434;
  color:#fff;
}

#barChart rect#voc, #barChart circle#voc
{
  fill:#86477A;
  color:#fff;
}

#barChart rect#tpm, #barChart circle#tpm
{
  fill:#5D824D;
  color:#fff;
}

#barChart text
{
  margin-bottom: 5px;
  color:#fff;
  font-size: 10px;
}

#barChart text
{
  text-transform: uppercase;
}

#barChart text.lower
{
  text-transform:none;
}

